--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kirx76/eslint-plugin",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "main": "index.ts",
   "author": {
@@ -19,10 +19,26 @@
   "devDependencies": {
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@types/chai": "^4.3.0",
     "@types/eslint": "^8.4.1",
-    "@types/node": "^18.7.14",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.22",
+    "@types/prettier": "^2.4.4",
+    "@types/react": "^17.0.41",
     "@types/requireindex": "^1.2.0",
-    "prettier": "^2.7.1",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^28.1.3",
+    "prettier": "^2.6.0",
+    "react": "^17.0.2",
+    "rimraf": "^3.0.2",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
