--- a/.eslintrc
+++ b/.eslintrc
@@ -22,8 +22,8 @@
     }
   },
   "rules": {
-    "import/prefer-default-export": 0,
-    "import/no-import-module-exports": 0,
-    "import/no-unresolved": 0
+//    "import/prefer-default-export": 0,
+//    "import/no-import-module-exports": 0,
+//    "import/no-unresolved": 0
   }
 }
